--- a/api/package.json
+++ b/api/package.json
@@ -12,15 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "2.5.0",
-    "bcrypt": "3.0.6",
-    "cors": "2.8.5",
-    "express": "4.17.0",
-    "express-jwt": "5.3.1",
-    "graphql": "14.3.0",
-    "jsonwebtoken": "8.5.1",
-    "lowdb": "1.0.0",
-    "uuid": "3.3.2"
+    "apollo-server-express": "^3.11.1",
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-jwt": "^7.7.7",
+    "graphql": "^16.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "lowdb": "^3.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "1.19.0"
